:art: 新增web异常捕获为json格式，更加清晰明了|减少翻译组件依赖